--- a/CSS/texto.css
+++ b/CSS/texto.css
@@ -57,6 +57,11 @@ body {
 
 /* Responsividade para telas pequenas */
 @media (max-width: 600px) {
+  .texto {
+    font-size: 0.80em;
+    width: 100vw;
+    padding: 15px;
+  }
   img {
     max-width: 100%;
     height: auto;
