--- a/CSS/texto.css
+++ b/CSS/texto.css
@@ -5,14 +5,14 @@ H1 {
   transform: translateX(-50%);
   background-color: #2b2b2b;
   color: #fff;
-  padding: 15px;
-  border-radius: 13px;
-  font-size: 15px;
+  padding: 20px;
+  border-radius: 12px;
+  font-size: 18px;
   font-family: 'Arial', sans-serif;
   text-align: center;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-  max-width: 95vw;     /* Agora adaptável */
-  line-height: 1.5;
+  max-width: 90vw;     /* Agora adaptável */
+  line-height: 1.6;
   z-index: 1;
   word-wrap: break-word;
   box-sizing: border-box;
@@ -57,11 +57,19 @@ body {
 
 /* Responsividade para telas pequenas */
 @media (max-width: 600px) {
+h1 {
+    font-size: 14px;
+    padding: 15px;
+    max-width: 95vw;
+    line-height: 1.4;
+  }
+
   .texto {
     font-size: 0.80em;
     width: 100vw;
     padding: 15px;
   }
+
   img {
     max-width: 100%;
     height: auto;
