--- a/CSS/texto.css
+++ b/CSS/texto.css
@@ -59,11 +59,10 @@ h1 {
 
 /* Responsividade para telas pequenas */
 @media (max-width: 600px) {
-  h1 {
+   h1 {
     font-size: 1rem; /* 16px */
     padding: 15px;
-    max-width: 95vw;
-    line-height: 1.4;
+    width: 100vw; /* Ocupa toda a largura */
   }
 
   .texto {
