--- a/CSS/texto.css
+++ b/CSS/texto.css
@@ -11,8 +11,7 @@ h1 {
   position: absolute;
   bottom: 30px;
   left: 0;
-  width: 98vw; /* Ocupa quase toda a largura da tela */
-  margin: 0 auto;
+  width: 100vw;
   background-color: #2b2b2b;
   color: #fff;
   padding: 20px;
@@ -59,10 +58,11 @@ h1 {
 
 /* Responsividade para telas pequenas */
 @media (max-width: 600px) {
-   h1 {
+  h1 {
     font-size: 1rem; /* 16px */
     padding: 15px;
-    width: 100vw; /* Ocupa toda a largura */
+    width: 100vw;
+    border-radius: 0; /* opcional: remove bordas arredondadas nas laterais */
   }
 
   .texto {
