--- a/CSS/texto.css
+++ b/CSS/texto.css
@@ -10,7 +10,7 @@ body {
 h1 {
   position: absolute;
   bottom: 30px;
-  left: 0;
+  left: 50%;
   width: 100vw;
   background-color: #2b2b2b;
   color: #fff;
@@ -62,7 +62,6 @@ h1 {
     font-size: 1rem; /* 16px */
     padding: 15px;
     width: 90vw;
-    border-radius: 0; /* opcional: remove bordas arredondadas nas laterais */
   }
 
   .texto {
