--- a/CSS/texto.css
+++ b/CSS/texto.css
@@ -10,7 +10,7 @@ body {
 h1 {
   position: absolute;
   bottom: 30px;
-  left: 50%;
+  left: 0;
   width: 100vw;
   background-color: #2b2b2b;
   color: #fff;
@@ -59,9 +59,11 @@ h1 {
 /* Responsividade para telas pequenas */
 @media (max-width: 600px) {
   h1 {
-    font-size: 1rem; /* 16px */
+    font-size: 1rem;
     padding: 15px;
     width: 90vw;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .texto {
